# rendera

./: .gitignore  .gitmodules  .latex.yml  .travis.yml  .travis.yml.multi  Airbrush.cxx  Airbrush.h  Algo.H  Algo.cxx  Bitmap.H  Bitmap.cxx  Bitmap.h  Blend.H  Blend.cxx  Blend.h  Bmp.cxx  Bmp.h  Brush.H  Brush.cxx  Brush.h  Button.H  Button.cxx  Button.h  CMakeLists.txt  CREDITS  ChangeLog  CheckBox.cxx  Clone.H  Clone.cxx  Clone.h  Common.H  Crop.H  Crop.cxx  Crop.h  Dialog.H  Dialog.cxx  Dialog.h  DialogBox.H  DialogBox.cxx  DialogWindow.H  (+141 more)
.github/workflows/: metarelease.yml  release-appimage-x86_64.yml
FX/: FX.cxx  FilterMatrix.H  Transform.cxx
File/: File.cxx  FileSP.cxx
Graphics/: Blend.H  Gamma.H  Octree.H
Gui/: CheckBox.H  CheckBox.cxx  InputFloat.H  InputFloat.cxx  InputInt.H  InputInt.cxx  InputText.cxx  Separator.cxx  StaticText.H  Widget.cxx
Main/: Brush.cxx  Dialog.cxx  Gui.cxx  Inline.H  Undo.cxx  View.H  View.cxx
Tools/: Crop.H  Crop.cxx  GetColor.H  Paint.H
file/: File.cxx  FileSP.H
graphics/: Quantize.cxx  Stroke.cxx
gui/: InputFloat.cxx  InputText.cxx
help/: rendera.html  test.html
images/: barry_script.txt
m4/: macro_dir.md
main/: Clone.cxx  Gui.cxx  Project.cxx  Render.H
make/: Makefile.mingw
man/: rendera.man
octree/: array.h  array2d.h  numtraits.h  octree.h  octree.tcc  point3d.h  shareddata.h  tinyvector.h
packaging/: ReadMe.txt.in  app.exe.rc  app.icns  prepare_appimage_appdir.sh  rendera.desktop
redist/: Restore.py
src/: Algo.cxx  Art.H  Art.cxx  Bitmap.H  Bitmap.cxx  Blend.H  Blend.cxx  Brush.H  Brush.cxx  Button.H  Button.cxx  CheckBox.H  CheckBox.cxx  Clone.H  Clone.cxx  ColorOptions.H  ColorOptions.cxx  Common.H  Common.cxx  ConvolutionMatrix.H  Crop.H  Crop.cxx  Dialog.H  Dialog.cxx  DialogWindow.H  DialogWindow.cxx  DitherMatrix.H  Editor.H  Editor.cxx  ExportData.H  ExportData.cxx  ExtraMath.H  ExtraMath.cxx  FX.H  FX.cxx  FX2.H  FX2.cxx  FastRnd.H  File.H  File.cxx  (+124 more)
src/FX/: AlphaClear.H  AlphaClear.cxx  AlphaColor.H  AlphaColor.cxx  AlphaInvert.H  AlphaInvert.cxx  Bloom.H  Bloom.cxx  BoxFilters.H  BoxFilters.cxx  Colorize.H  Colorize.cxx  CubePlot.H  CubePlot.cxx  Desaturate.H  Desaturate.cxx  Dither.H  Dither.cxx  Equalize.H  Equalize.cxx  FX.H  FX.cxx  ForwardFFT.H  ForwardFFT.cxx  GaussianBlur.H  GaussianBlur.cxx  InverseFFT.H  InverseFFT.cxx  Invert.H  Invert.cxx  Marble.H  Marble.cxx  Normalize.H  Normalize.cxx  Painting.H  Painting.cxx  PaletteColors.H  PaletteColors.cxx  Randomize.H  Randomize.cxx  (+22 more)
test/: Algo.cxx  blend.C  bresenham.C  endian.C  endian.cc  fltk_version.C  numerics.C  octree.C  pathexe.C
tests/: Makefile.am  testsuite.at.in
tools/: Paint.cxx  Text.cxx
win32/include/: jmorecfg.h
